--- a/pet_project/pet-adoption/server/package.json
+++ b/pet_project/pet-adoption/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.15.3"
