--- a/pet_project/pet-adoption/package.json
+++ b/pet_project/pet-adoption/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "lucide-react": "^0.544.0",
+    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
